edited validators , added condition on add button to only be available after form is valid, added better spaceholders

--- a/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.html
+++ b/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.html
@@ -35,8 +35,14 @@
               id="recipeName"
               formControlName="name"
             />
+            @if(editForm.controls['name'].invalid &&
+            editForm.controls['name'].touched){
+            <span class="text-danger fw-bold ms-1">name is not valid</span>
+            }@else if (editForm.controls['name'].valid &&
+            editForm.controls['name'].touched) {
+            <span class="text-success fw-bold ms-1">name is valid</span>
+            }
           </div>
-
           <div class="mb-3">
             <label for="servings" class="form-label">servings:</label>
             <input
@@ -45,6 +51,13 @@
               id="servings"
               formControlName="servings"
             />
+            @if(editForm.controls['servings'].invalid &&
+            editForm.controls['servings'].touched){
+            <span class="text-danger fw-bold ms-1">Serving is not valid</span>
+            }@else if (editForm.controls['servings'].valid &&
+            editForm.controls['servings'].touched) {
+            <span class="text-success fw-bold ms-1">Serving is valid</span>
+            }
           </div>
           <div class="mb-3">
             <label for="time" class="form-label">Time:</label>
@@ -54,6 +67,13 @@
               id="time"
               formControlName="time"
             />
+            @if(editForm.controls['time'].invalid &&
+            editForm.controls['time'].touched){
+            <span class="text-danger fw-bold ms-1">time is not valid</span>
+            }@else if (editForm.controls['time'].valid &&
+            editForm.controls['time'].touched) {
+            <span class="text-success fw-bold ms-1">time is valid</span>
+            }
           </div>
           <div class="mb-3">
             <label for="category" class="form-label">Category:</label>
@@ -63,6 +83,13 @@
               id="category"
               formControlName="category"
             />
+            @if(editForm.controls['category'].invalid &&
+            editForm.controls['category'].touched){
+            <span class="text-danger fw-bold ms-1">category is not valid</span>
+            }@else if (editForm.controls['category'].valid &&
+            editForm.controls['category'].touched) {
+            <span class="text-success fw-bold ms-1">category is valid</span>
+            }
           </div>
           <div class="mb-3">
             <label for="subcategory" class="form-label">Sub Category:</label>
@@ -72,6 +99,15 @@
               id="subcategory"
               formControlName="subcategory"
             />
+            @if(editForm.controls['subcategory'].invalid &&
+            editForm.controls['subcategory'].touched){
+            <span class="text-danger fw-bold ms-1"
+              >subcategory is not valid</span
+            >
+            }@else if (editForm.controls['subcategory'].valid &&
+            editForm.controls['subcategory'].touched) {
+            <span class="text-success fw-bold ms-1">subcategory is valid</span>
+            }
           </div>
           <div class="mb-3">
             <label for="Description" class="form-label">Description:</label>
@@ -81,6 +117,15 @@
               id="Description"
               formControlName="description"
             />
+            @if(editForm.controls['description'].invalid &&
+            editForm.controls['description'].touched){
+            <span class="text-danger fw-bold ms-1"
+              >description is not valid</span
+            >
+            }@else if (editForm.controls['description'].valid &&
+            editForm.controls['description'].touched) {
+            <span class="text-success fw-bold ms-1">description is valid</span>
+            }
           </div>
           <div class="mb-3">
             <label for="Direction" class="form-label">Direction:</label>
@@ -90,6 +135,15 @@
               id="Direction"
               formControlName="directions"
             />
+            @if(editForm.controls['directions'].invalid &&
+            editForm.controls['directions'].touched){
+            <span class="text-danger fw-bold ms-1"
+              >directions is not valid</span
+            >
+            }@else if (editForm.controls['directions'].valid &&
+            editForm.controls['directions'].touched) {
+            <span class="text-success fw-bold ms-1">directions is valid</span>
+            }
           </div>
           <div formArrayName="ingredients">
             <div
@@ -111,7 +165,7 @@
                 />
               </div>
 
-              <div class="col-4">
+              <div class="col-4 mt-3">
                 <label for="quantity">Quantity:</label>
                 <input
                   type="text"
@@ -122,7 +176,7 @@
                 />
               </div>
 
-              <div class="col-4">
+              <div class="col-4 mt-3">
                 <label for="measurementUnit">Units:</label>
                 <input
                   type="text"
@@ -134,7 +188,11 @@
               </div>
             </div>
           </div>
-          <button type="submit" class="btn text-light mt-4 mb-5">
+          <button
+            type="submit"
+            class="btn text-light mt-4 mb-5"
+            [disabled]="!editForm.valid"
+          >
             Save Changes
           </button>
         </form>
