--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -139,7 +139,7 @@
     </div>
 </section>
 
-<!-- users -->
+<!-- about -->
 <section class="user">
     <div class="container" style="background-color: #395963;">
         <div class="row p-4 align-items-center mydailyrecipes" >
