--- a/front/src/app/component/navbar/navbar.component.css
+++ b/front/src/app/component/navbar/navbar.component.css
@@ -61,8 +61,10 @@ li {
   align-items: center;
   font-size: 16px;
   color: var(--main-color);
+  transition: all 0.3s;
 }
 
+/* Dark Mode */
 .dark-mode .links .navbar-nav .nav-item a {
   color: rgb(238, 11, 11);
 }
@@ -149,6 +151,10 @@ li {
     width: fit-content;
   }
 
+  .links .navbar-nav .nav-item a:hover{
+    background-color: antiquewhite;
+    color: var(--main-color) !important;
+  }
   /* Adjust the width of search input */
   .search-bar input {
     width: 100%;
