--- a/front/src/app/component/profile/edit-profile/edit-profile.component.html
+++ b/front/src/app/component/profile/edit-profile/edit-profile.component.html
@@ -22,9 +22,9 @@
     </form>
   </div>
 
-  <div *ngIf="success" class="text-center mb-4">
+  <div *ngIf="success" class="text-center mb-3">
     <i class="far fa-check-circle check-icon" style="color: var(--btn-color); font-size: 50px;"></i>
-    <p class="text-center" style="color: var(--footer-color);">Your Personal information has been edited successfully!</p>
+    <p class="text-center mt-2" style="color: var(--main-color);">Your Personal information has been edited successfully!</p>
   </div>
 </div>
 
