--- a/front/src/app/component/profile/socials/socials.component.html
+++ b/front/src/app/component/profile/socials/socials.component.html
@@ -23,8 +23,8 @@
       </form>
     </div>
   
-    <div *ngIf="success" class="text-center mb-4">
+    <div *ngIf="success" class="text-center mb-3">
       <i class="far fa-check-circle check-icon" style="color: var(--btn-color); font-size: 50px;"></i>
-      <p class="text-center" style="color: var(--footer-color);">Links Updated successfully!</p>
+      <p class="text-center mt-2" style="color: var(--main-color);">Bio Updated successfully!!</p>
     </div>
   </div>
