--- a/front/src/app/component/profile/socials/socials.component.html
+++ b/front/src/app/component/profile/socials/socials.component.html
@@ -45,7 +45,7 @@
       </form>
     </div>
   
-    <div *ngIf="success" class="text-center mb-3">
+    <div *ngIf="success" class="text-center mb-3 pt-4">
       <i class="far fa-check-circle check-icon" style="color: var(--btn-color); font-size: 50px;"></i>
       <p class="text-center mt-2" style="color: var(--main-color);">Bio Updated successfully!!</p>
     </div>
