Admin-profile darkmode

--- a/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
+++ b/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
@@ -248,7 +248,7 @@
                 <i class="far fa-check-circle check-icon" style="color: var(--btn-color); font-size: 50px;"></i>
               </div>
               <div>
-                <span class="text-center" style="color: var(--footer-color);">Recipe added Successfully!!</span>
+                <span class="text-center" style="color: var(--primary-text-color);">Recipe added Successfully!!</span>
               </div>
               
         </div>
