--- a/front/src/app/component/forgot-password-components/forgot-password/forgot-password.component.html
+++ b/front/src/app/component/forgot-password-components/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
         
         <div class="rounded shadow-sm p-3" style="background-color: var(--main-background);">
             <div >
-                <h2 class="text-center" style="color: var(--footer-color);">Forgot Password</h2>
+                <h2 class="text-center" style="color: var(--primary-text-color);">Forgot Password</h2>
             <p class="text-center mt-3" >Please Enter Your Account Email to sent reset password code to it </p>
             <form [formGroup]="EmailForm" (ngSubmit)="SendEmail()" class="auth">
                 <!-- Email -->
