--- a/front/src/app/component/forgot-password-components/reset-password/reset-password.component.html
+++ b/front/src/app/component/forgot-password-components/reset-password/reset-password.component.html
@@ -2,7 +2,7 @@
     <div class=" col-12 col-lg-4 col-md-6 col-sm-10 co m-auto">
         <div class="rounded shadow-sm p-3" style="background-color: var(--main-background);">
             <div >
-                <h2 class="text-center" style="color: var(--footer-color);">Reset Password</h2>
+                <h2 class="text-center" style="color: var(--primary-text-color);">Reset Password</h2>
              <form [formGroup]="NewPassForm" (ngSubmit)="SendNewPassword('ResetPasswordSuccess')" >
                 <div class=" mt-4 position-relative">
                     <label for="new-password" class=" mb-2">New Password</label>
@@ -92,7 +92,7 @@
                 <i class="far fa-check-circle check-icon" style="color: var(--btn-color); font-size: 50px;"></i>
               </div>
               <div>
-                <p class="text-center" style="color: var(--footer-color);">Your Password has been reset; you can log in now!</p>
+                <p class="text-center" style="color: var(--primary-text-color);">Your Password has been reset; you can log in now!</p>
               </div>
               
         </div>
