--- a/front/src/app/component/forgot-password-components/send-code/send-code.component.html
+++ b/front/src/app/component/forgot-password-components/send-code/send-code.component.html
@@ -2,7 +2,7 @@
     <div class=" col-12 col-lg-4 col-md-6 col-sm-10 co m-auto">
         <div class="rounded shadow-sm p-3" style="background-color: var(--main-background);">
             <div >
-                <h2 class="text-center" style="color: var(--footer-color);">Verification Code</h2>
+                <h2 class="text-center" style="color: var(--primary-text-color);">Verification Code</h2>
                 <p class="text-center mt-3" >Please Enter Sent Code </p>
                 <form [formGroup]="CodeForm" (ngSubmit)="CodeConfirmation()" class=" m-4">
     
