--- a/front/src/app/component/profile/socials/socials.component.html
+++ b/front/src/app/component/profile/socials/socials.component.html
@@ -25,6 +25,6 @@
   
     <div *ngIf="success" class="text-center mb-4">
       <i class="far fa-check-circle check-icon" style="color: var(--btn-color); font-size: 50px;"></i>
-      <p class="text-center" style="color: var(--footer-color);">Links Updated successfully!</p>
+      <p class="text-center" style="color: var(--primary-text-color);">Links Updated successfully!</p>
     </div>
   </div>
