--- a/front/src/app/component/single-recipe/single-recipe.component.css
+++ b/front/src/app/component/single-recipe/single-recipe.component.css
@@ -67,6 +67,10 @@ p {
   text-decoration: underline;
 }
 
+.recipe-desc-container {
+  background-color: var(--third-color);
+}
+
 .recipe-description {
   font-family: var(--second-font);
   color: var(--main-color);
