--- a/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.css
+++ b/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.css
@@ -8,8 +8,8 @@ h1, form label{
   }
   
   form button {
-    background-color: var(--main-color);
-    border-color: var(--main-color);
+    background-color: var(--main-btn-bg);
+    border-color: var(--main-btn-bg);
   }
   
   form button:hover{
@@ -18,4 +18,12 @@ h1, form label{
   
   form .text-danger {
     color: var(--btn-color) !important;
+  }
+
+  .btn-outline-dark {
+    color: var(--btn-outline-color);
+  }
+
+  .btn-outline-dark:hover {
+    color: var(--third-color)
   }
