--- a/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.css
+++ b/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.css
@@ -1,6 +1,6 @@
 
 .btn {
-    background-color: var(--main-color);
+    background-color: var(--main-btn-bg);
 }
 h1, form label{
     color: var(--main-color);
