--- a/front/src/app/component/admin/admin-edit-user/admin-edit-user.component.css
+++ b/front/src/app/component/admin/admin-edit-user/admin-edit-user.component.css
@@ -1,5 +1,5 @@
 .btn {
-    background-color: var(--main-color);
+    background-color: var(--main-btn-bg);
   }
   h1, form label{
     color: var(--main-color);
