--- a/front/src/app/component/otp-validator/otp-validator.component.html
+++ b/front/src/app/component/otp-validator/otp-validator.component.html
@@ -2,7 +2,7 @@
     <div class=" col-12 col-lg-4 col-md-6 col-sm-10 co m-auto">
         
         <div class="rounded shadow-sm p-3" style="background-color: var(--main-background);">
-            <h2 class="text-center" style="color: var(--footer-color);">Verify Your Account</h2>
+            <h2 class="text-center" style="color: var(--primary-text-color);">Verify Your Account</h2>
             <p class="text-center mt-3" >A verification code was send to user Email please check and enter the sent code </p>
             <form [formGroup]="OTPForm" (ngSubmit)="OTPSender('OtpSuccess')" class=" m-4">
 
@@ -29,7 +29,7 @@
                 <i class="far fa-check-circle check-icon" style="color: var(--btn-color); font-size: 50px;"></i>
               </div>
               <div>
-                <p class="text-center" style="color: var(--footer-color);">Your Email has been verified; you can log in now!</p>
+                <p class="text-center" style="color: var(--primary-text-color);">Your Email has been verified; you can log in now!</p>
               </div>
               
         </div>
