--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -28,9 +28,9 @@
     </div>
     <div style="margin:0px 40px 0px  65px;">
 
-      <p class="text-secondary fs-5 bio " >{{user.bio}}</p>
+      <p class="text-secondary fs-5 bio darkbio" >{{user.bio}}</p>
     </div>
-    <div class="d-flex  " style="margin-left: 65px;">
+    <div class="d-flex " style="margin-left: 65px;">
       <div *ngIf="user.youtube_link" class="me-4  rounded">
         <a [href]="user.youtube_link" class="links "><img src="assets/imgs/youtube.png" alt="youtube" class="link-img">Youtube</a>
       </div>
