--- a/front/src/app/component/recipes/recipes.component.css
+++ b/front/src/app/component/recipes/recipes.component.css
@@ -1,17 +1,17 @@
-.background{
+.background, .pink-btn{
     background-color: #e9e9e8;
     margin-top: 10px;
     border-radius: 5%;
     cursor: pointer;
 }
-.background:hover{
+.background:hover, .pink-btn:hover{
     background-color: #ffe0e0;
-    color: white;
+    /* color: white; */
 }
 .border-bottom{
     border-color: var(--main-color) !important;
 }
-.color{
+.color, .pink-btn{
     color: #d25c4c;
     font-family: var(--second-font);
     font-weight: 600;
@@ -68,17 +68,20 @@ h6{
     color: white;
 }
 .pink-btn{
-    background-color: var(--main-color); 
+    /* background-color: var(--main-btn-bg);  */
     letter-spacing: 0.09em;
-    color: white;
+    /* color: white; */
 }
 .pink-btn:hover {
-    background-color: white; 
-    color: var(--main-color); 
-    border-color:var(--main-color) ;
+    /* background-color: white;  */
+    /* color: var(--main-color); 
+    border-color:var(--main-color) ; */
+}
+.pink-btn img{
+    filter: invert(70%);
 }
 .pink-btn:hover img{
-    filter: invert(100%);
+    filter: invert(92%);
 }
 .rounded-image{
     border-radius: 5%;
