--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -25,7 +25,7 @@
       style="height: 80vh"
     />
   </div>
-  <div class="rounded shadow bg-light p-4 mt-3 w-100">
+  <div class="rounded shadow recipe-desc-container p-4 mt-3 w-100">
     <p class="recipe-description text">{{ recipe?.description }}</p>
   </div>
   <div class="servings mt-4 row p-2">
