--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -19,7 +19,9 @@
       <div class="col-lg-1 col-1 col-md-1 col-sm-1 justify-content-end">
         <button class="navbar-toggler" type="button" (click)="toggleNavbar()" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span [ngClass]="{ 'notnavbar-toggler-icon': !isCollapsed, 'navbar-toggler-icon': isCollapsed }"  [ngStyle]="{ color: darkMode ? 'white' : 'var(--main-color)'}"></span>
+          <span [ngClass]="{ 'notnavbar-toggler-icon': !isCollapsed, 'navbar-toggler-icon': isCollapsed }" 
+            [ngStyle]="{ color: darkMode ? 'white' : 'var(--main-color)'}">
+          </span>
         </button>
       </div>
 
