--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -35,24 +35,20 @@
     </div>
 
     <div class="d-flex  " style="margin-left: 65px;">
-      <div *ngIf="user.youtube_link" class="me-4 rounded">
-        <a [href]="user.youtube_link" target="_blank" class="links">
-          <img src="assets/imgs/youtube.png" alt="youtube" class="link-img">
-          Youtube
-        </a>
-      </div>
-      <div *ngIf="user.instagram_link" class="me-4 rounded">
-        <a [href]="user.instagram_link" target="_blank" class="links">
-          <img src="assets/imgs/instagram.png" alt="instagram" class="link-img">
-          Instagram
-        </a>
-      </div>
-      <div *ngIf="user.tiktok_link" class="me-4 rounded">
-        <a [href]="user.tiktok_link" target="_blank" class="links">
-          <img src="assets/imgs/tiktok.png" alt="tiktok" class="link-img">
-          Tiktok
-        </a>
-      </div>
+      <a *ngIf="user.youtube_link" [href]="user.youtube_link" target="_blank" class="me-4 shadow-sm px-4 py-2 rounded links">
+        <img src="assets/imgs/youtube.png" alt="youtube" class="link-img">
+        Youtube
+      </a>
+
+      <a *ngIf="user.instagram_link" [href]="user.instagram_link" target="_blank" class="me-4 shadow-sm px-4 py-2 rounded links">
+        <img src="assets/imgs/instagram.png" alt="instagram" class="link-img">
+        Instagram
+      </a>
+        
+      <a *ngIf="user.tiktok_link" [href]="user.tiktok_link" target="_blank" class="me-4 shadow-sm px-4 py-2 rounded links">
+        <img src="assets/imgs/darkTiktok.png" alt="tiktok" class="link-img">
+        Tiktok
+      </a>
     </div>
   </section>
 
