--- a/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
+++ b/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
@@ -20,7 +20,10 @@
     </ng-template>
 
     <ng-template pTemplate="body" let-data>
-        <tr class="dataTable col-sm-2" [ngStyle]="{ 'background-color': data.status === 'denied' ? '#ffe0e0' : 'white' }">
+        <tr class="dataTable col-sm-2" 
+            [ngClass]="{ 'dark-mode-pending':  data.status === 'denied' }"
+            [ngStyle]="{ 'background-color': data.status === 'denied' ? '#ffe0e0' : 'var(--admin-table)' }"
+        >
             <td>{{ data.id }}</td>
             <td>
                 <img [src]="data.image" [alt]="data.name" class="shadow-4 object-fit-cover" style="height: 70px; width: 90px;" />
@@ -53,7 +56,9 @@
                             
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-danger" (click)="deletePendingRecipe(data.id)"  data-bs-dismiss="modal">Delete Pending Recipe</button>
+                                <button type="button" class="btn btn-danger" (click)="deletePendingRecipe(data.id)"  data-bs-dismiss="modal">
+                                    Delete Pending Recipe
+                                </button>
                             </div>
                         </div>
                     </div>
