dark mode changes

--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -275,10 +275,10 @@
       <div class="modal-header">
         <button
           type="button"
-          class="btn-close"
+          class="close-btn"
           data-bs-dismiss="modal"
           aria-label="Close"
-        ></button>
+        ><i class="fa fa-xmark" aria-hidden="true"></i></button>
       </div>
       <div class="modal-body">
         <app-edit-profile></app-edit-profile>
@@ -298,10 +298,10 @@
       <div class="modal-header">
         <button
           type="button"
-          class="btn-close"
+          class="close-btn"
           data-bs-dismiss="modal"
           aria-label="Close"
-        ></button>
+        ><i class="fa fa-xmark" aria-hidden="true"></i></button>
       </div>
       <div class="modal-body">
         <app-socials></app-socials>
