--- a/front/src/app/component/recipes/recipes.component.css
+++ b/front/src/app/component/recipes/recipes.component.css
@@ -3,6 +3,7 @@
     margin-top: 10px;
     border-radius: 5%;
     cursor: pointer;
+    color:#395963  ;
 }
 .background:hover, .pink-btn:hover{
     background-color: #ffe0e0;
