--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -31,7 +31,6 @@
     </div>
 
     <div style="margin:0px 40px 0px  65px;">
-
       <p class="text-secondary fs-5 bio darkbio" >{{user.bio}}</p>
     </div>
 
@@ -56,8 +55,8 @@
   <section class="recipes-wrapper mt-5">
     <div class="title">
       <h1 class="fw-bold text-capitalize">
-        <img src="assets/imgs/heart.png" alt="chef" class="chef" />your favorite
-        recipes
+        <img src="assets/imgs/heart.png" alt="chef" class="chef"/>
+        your favorite recipes
       </h1>
     </div>
     <div
