fixed color bugs in darkmode applying in both light and dark

--- a/front/src/app/component/about/about.component.css
+++ b/front/src/app/component/about/about.component.css
@@ -22,6 +22,11 @@
   color: var(--second-color);
 }
 
+.dark-mode.subtitle {
+  color: var(--second-color);
+  color: red !important;
+}
+
 .team-member {
   display: flex;
   align-items: center;
