adjust left home banner to be darker in dark mode

--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -143,7 +143,7 @@ body.dark-mode .latest{
   color: #F2F3F4 !important;
 }
 .dark-mode .home-banner .banner-left {
-  /* background: #101218 !important; */
+  background: #3959636e !important;
   height: 100vh;
   padding: 0 16%;
 }
