change icon in social

--- a/front/src/app/component/profile/socials/socials.component.html
+++ b/front/src/app/component/profile/socials/socials.component.html
@@ -27,7 +27,7 @@
         
         <div class="mb-3">
             <label for="tiktok_link" class="form-label fs-5">
-              <img src="assets/imgs/tiktok.png" alt="tiktok" >
+              <img src="assets/imgs/darkTiktok.png" alt="tiktok" >
               TikTok
             </label>
             <input type="text" id="tiktok_link" formControlName="tiktok_link" class="form-control" placeholder="https://www.tiktok.com/">
