--- a/front/src/app/component/login/login.component.css
+++ b/front/src/app/component/login/login.component.css
@@ -9,6 +9,14 @@ input{
     outline: none;
     border-radius: 5px;
 }
+.form-group{
+    position: relative;
+    color: #828487;
+    display: flex;
+}
+input:focus{
+    color: black;
+}
 
 .btn-auth{
     font-size: 23px;
