--- a/front/src/app/component/home/home.component.css
+++ b/front/src/app/component/home/home.component.css
@@ -284,7 +284,21 @@ body {
     margin-top: 18px;
     font-size: 18px;
 }
-
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-10px);
+    }
+    60% {
+      transform: translateY(-5px);
+    }
+  }
+  
+.check-icon {
+    animation: bounce 1s ease infinite;
+}
 @media (max-width: 1024px) {
     .categories .row .col-lg-3:nth-child(3) img {
         height: 430px;
