--- a/front/src/app/component/otp-validator/otp-validator.component.html
+++ b/front/src/app/component/otp-validator/otp-validator.component.html
@@ -29,7 +29,7 @@
                 <i class="far fa-check-circle check-icon" style="color: var(--btn-color); font-size: 50px;"></i>
               </div>
               <div>
-                <p class="text-center" style="color: var(--primary-text-color);">Your Email has been verified; you can log in now!</p>
+                <p class="text-center" style="color: var(--primary-text-color);">Your Email has been verified, you can log in now!</p>
               </div>
               
         </div>
