changed launch to lunch placeholders

--- a/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
+++ b/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
@@ -119,7 +119,7 @@
         type="text"
         class="form-control"
         id="category-field"
-        placeholder="ex: Breakfast, Dinner, Launch, Dessert..."
+        placeholder="ex: Breakfast, Dinner, lunch, Dessert..."
         formControlName="category"
       />
       @if(recipeForm.controls['category'].invalid &&
