--- a/front/src/app/component/search-input/search-input.component.css
+++ b/front/src/app/component/search-input/search-input.component.css
@@ -24,7 +24,11 @@
     color: var(--main-color);
     transform: translateY(-50%);
 }
-
+.badge{
+    color: #fcb900;
+    font-size: 15px;
+    
+}
 .search-bar .clear {
     top: 47%;
     right: 3%;
