--- a/front/src/app/component/single-recipe/single-recipe.component.css
+++ b/front/src/app/component/single-recipe/single-recipe.component.css
@@ -174,6 +174,11 @@ p {
 .related-recipes img {
   transition: all 0.3s ease;
 }
+.badge{
+  color: #fcb900;
+  font-size: 15px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
 
 .related-recipes img:hover {
   transform: scale(1.1);
