--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -119,6 +119,15 @@
         </div>
       </div>
     </div>
+    <div class=" d-flex justify-content-center flex-column align-items-center"
+     *ngIf="getFilteredRecipes().length==0" >
+      <div class="p-3">
+        <h3 class="text-center text-secondary">
+          No Result Found with this Filter !!
+
+        </h3>
+      </div>
+    </div>
     <div class="d-flex justify-content-center my-4">
 
       <pagination-controls (pageChange)="p = $event"></pagination-controls>
